--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "fastmcp>=2.9.0",
-    "pydantic>=2.3.0"
+    "fastmcp>=2.9.0"
 ]
 
 [project.scripts]
