--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
-      # 可选：挂载文档目录以便动态更新
+      # 挂载文档目录以便动态更新
       - ./document:/app/document:ro
+      - ./uikit:/app/uikit:ro
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/mcp/"]
       interval: 30s
