--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,4 +23,4 @@ services:
     image: cloudflare/cloudflared:latest
     container_name: cloudflared-tunnel
     restart: unless-stopped
-    command: tunnel run --token eyJhIjoiZjJjZDFiOGNiNThmODFjNzgwNjNmZjI3YWZiMjVlY2EiLCJ0IjoiYjEyNDc5MjUtNzllNS00YmVlLWFjMjgtMzIzZTE1ODNhNGJjIiwicyI6Ik5qZGhNalUyWlRFdFl6a3lOaTAwTkdZNUxXSTBNak10T0RFNE4yRTBPRFEyTkRreiJ9
+    command: tunnel run --token ${CLOUDFLARE_TUNNEL_TOKEN}
