feat: 将 Docker 网络模式更改为 host 以增强连通性 (v1.1.15)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ services:
   easemob-doc-mcp:
     build: .
     container_name: easemob-doc-mcp
-    ports:
-      - "9000:9000"
+    network_mode: host
     restart: unless-stopped
     environment:
       - PYTHONUNBUFFERED=1
