--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   easemob-doc-mcp:
     build: .
     container_name: easemob-doc-mcp
-    network_mode: host
+    ports:
+      - "9000:9000"
     restart: unless-stopped
     environment:
       - PYTHONUNBUFFERED=1
